--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Skill Images</title>
     </head>
     <body>
+        <p>스킬 이미지 모음</p>
         <img src="./images/Angular.png" />
         <img src="./images/C.png" />
         <img src="./images/C++.png" />
